fix for services img size on small mobile

--- a/app/sass/services.scss
+++ b/app/sass/services.scss
@@ -163,5 +163,11 @@
 
   @media screen and (max-width: 300px) {
     height: $services-height * 2.3;
+
+    .packages {
+      img {
+        height: 200px;
+      }
+    }
   }
 }
